# nteprsm

./: .gitignore  Installation.md  LICENSE  README.md  parameter recovery.ipynb  pyproject.toml  readme.md  settings.py  util_NTEPmodel.py
config/: nteprsm_in1kbg07.yml  nteprsm_mi1kbg07.yml  nteprsm_mn1kbg07.yml  nteprsm_nc1kbg07.yml  nteprsm_nj2kbg07.yml  nteprsm_njkbg07.yml  nteprsm_pymc_njkbg07.yml  nteprsm_ut1kbg07.yml
data/: data_for_param_recover.csv  demo_layout.xlsx  quality_mn1.csv  quality_nc1.csv  quality_ut1.csv
data_parsing/: README.md  entity_data.json  get_dict.py  merge_data.ipynb  parse.py  pyproject.toml
experimental/: Turfgrass_EDA_v2.ipynb
model_data/: quality_ok1.csv
models/: model_04-feb-2024-distinct_taus.stan  model_27-mar-2024-hierarchical_tau.stan  no_consistent_rater_model_dist_matrix.stan  no_consistent_rater_model_pymc.py  nteprsm_turf_annual_seasonality.stan  pymc_no_consistent_rater_model_dist_matrix.py  working_pymc.py
notebooks/: explorative analysis.ipynb  manuscript1_parameter_recovery.ipynb  output.ipynb  parameter_recovery_analysis.ipynb  parameter_recovery_training.ipynb  pymc_vis.ipynb  pymc_visualization.ipynb  scrap_book_6.ipynb  utils.py  visulization_demo_for_frontend_dev.ipynb  yearly_seasonality_kernel.ipynb
nteprsm/: constants.py  model.py  utils.py  utils_parameter_recovery.py
poetry/: pyproject.toml
src/: PyStan_time_effect_test.ipynb  constants.py  fourier_model_time_effect.stan  fourier_model_time_effect_distinct_entries.stan  fourier_model_time_effect_distinct_entries_v8.stan  fourier_model_time_effect_distinct_entries_v8_sharedparams.stan  fourier_model_time_effect_distinct_entries_v9.stan  fourier_time_model-v8-sharedparams.ipynb  fourier_time_model-v8.ipynb  fourier_time_model-v9.ipynb  fourier_time_model.ipynb  model_v8_sharedparams_analyze.ipynb  model_v8_sharedparams_fit.ipynb  no_consistent_rater_model_dist_matrix  no_consistent_rater_model_dist_matrix.hpp  simple_fourier_model.stan  simple_fourier_model_2.stan  simple_fourier_model_4.stan  (+2 more)
(+39 files in other folders)
