[tool.poetry]
name = "stan-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
scipy = "^1.11.3"
scikit-learn = "^1.3.1"
jupyterlab = "^4.0.7"
notebook = "^7.0.5"
pystan = "^3.7.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
gptools-stan = "^0.1.5"
cmdstanpy = "^1.2.0"
arviz = "^0.17.0"
plotly = "^5.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
