[tool.poetry]
name = "nteprsm"
version = "0.1.0"
description = "ntep-rsm is a Bayesian model for the analysis of visual rating data based on item-reponse theory."
authors = ["Nip Hok Leung <niphl@connect.hku.hk>; Henry Qu <henry.yqu@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
numpy = "^1.26.4"
cmdstanpy = "^1.2.1"
arviz = "^0.17.0"
plotly = "^5.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
